--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
